fixed carousel buttons that were not visible in mobile view

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -100,7 +100,7 @@
         display: none;
     }
 
-    .row.responsive-row {
+    .ui.grid>div.row.responsive-row {
         display: block;
     }
 }
